--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
-  background-image: url(./images/23284.jpg);
+  color: white;
+  background-image: url(./images/grad.jpg);
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
