--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,7 +1,7 @@
 html, body, #root {
     font: 0.9rem sans-serif;
     background: #0a1f44;
-    color: #1e2432;
+    color: #0A1F44;
     height: 100%;
     margin: 0;
 }
@@ -19,30 +19,61 @@ html, body, #root {
     align-items: center;
     flex-direction: column;
 }
+.app-name {
+    font-size: 40px;
+    font-weight: bold;
+    color: white;
+}
+.app-develop {
+    font-size: 15px;
+}
+.highlight-title {
+    font-size: 25px;
+    font-weight: bold;
+}
+.highlight-info {
+    font-size: 20px;
+}
+.highlight-value {
+    font-size: 30px;
+    font-weight: 700;
+}
+/* .highlights {
+    display: flex;
+    flex-direction: row;
+} */
 
+.weather-description {
+    text-transform: capitalize;
+    font-size: 30px;
+    font-weight: 500;
+}
 .search {
+    font-size: 20px;
     outline: none;
-    padding: 20px 7%;
-    border-radius: 20px;
+    padding: 10px 7%;
+    border-radius: 10px;
     border: none;
-    margin-bottom: 5%;
+    margin-bottom: 2%;
     background: rgba(250, 250, 250, 0.85);
 }
 
 .city {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    padding: 40px 8%;
+    /* display: flex;
+    align-items: center; 
+     justify-content: center; 
+     flex-direction: column; */
+    padding: 20px;
     border-radius: 20px;
     background: rgba(250, 250, 250, 0.85);
     box-shadow: 10px 10px 5px 0px rgba(15, 15, 15, 0.404);
+    max-width: 700px;
+    max-height: 100%;
 }
 
 p {
     margin-top: 10px;
-    text-transform: uppercase;
+    /* text-transform: uppercase; */
     letter-spacing: 0.05em;
 }
 
@@ -89,5 +120,11 @@ p {
 
     .city {
         padding: 40px 20%;
+    }
+}
+
+@media (max-width: 991px) {
+    .city {
+        height: 100%;
     }
 }
